--- a/index.html
+++ b/index.html
@@ -2,39 +2,40 @@
     <head>
         <meta charset="utf-8">
         <title>akash's personal site</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <table cellspacing="20">
-            <td><img src="rdj" alt="robert dj"></td>
+            <td><img src="akash pic.png" alt="sober me" height="200" width="200"></td>
             <td><h1>Akash Singh</h1>
                 <p><em>I am a <strong><a href="https://www.dgshipping.gov.in/">seafearer</a></strong>.</em></p>
                 <p>I would like to welcome you all to this page. I am a seaferer and only decided to become one recently. please enjoy your surfing through this site and contact me for any queries.</p></td>
         </table>
-     <hr size="2" noshade>
+     <hr>
      <h3>Schools</h3>
      <ul><li>Loyola</li>
          <li>DBMS</li>
          <li>Yak Maritime</li>
      </ul>
+     <hr>
      <h3>Work Experience</h3>
-     <table border="1">
+     <table>
          <thead>
             <th>Dates</th>
             <th>Work</th>
          </thead>
          <tbody>
-            
-         </tbody>
-         
-         <tr>
+          <tr>
              <td>2019-2021 </td>
              <td>Trainee at Synergy Maritime</td>
-         </tr>
-         <tr>
+          </tr>
+          <tr>
              <td>2018-2019</td>
              <td>Training at Yak Maritime</td>
-         </tr>
+          </tr>
+         </tbody>
      </table>
+     <hr>
      <h3>Skills</h3>
      <table border="1">
          <tr>
@@ -64,6 +65,7 @@
              </td>
         </tr>
      </table>
+     <hr>
      <a href="hobbies.html">My Hobbies</a>
      <a href="contacts.html">My Contacts</a>
     </body>
